# ScreenAnimation

./: .clinerules  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  ScreenAnimation.ps1  animation1.flow  evaluation_report.md  implementation_plan.md  livewallpaper.flow  monitorscreenshot.flow  rustfmt.toml  transition.flow  wallpaper.flow
.github/workflows/: ci.yml
assets/: animation1.flow  animation2.flow  animation3.flow
assets/animation1/: config.toml
assets/wallpaper1/: config.toml
benches/: performance.rs
docs/: architecture.md  building.md  dxgi_api.md  format.md
examples/: animation1.flow  animation2.flow  install_association.reg  kaleidoscope.flow  livewallpaper.flow  monitorswitch.flow  plasma.flow  screenshot.flow  screentransition.flow  screentransition_new.flow  wave.flow
examples/animation1/: shader.wgsl  shader_new.wgsl
examples/kaleidoscope/: config.toml  shader.wgsl
examples/livewallpaper/: config.toml  shader.wgsl
examples/monitorscreenshot/: README.md  config.toml  shader.wgsl
examples/monitorswitch/: config.toml  shader.wgsl
examples/plasma/: config.toml  shader.wgsl
examples/screenshot/: config.toml  shader.wgsl
examples/screentransition/: config.toml  shader.wgsl
examples/wallpaper1/: config.toml  shader.wgsl
examples/wave/: config.toml  shader.wgsl
public/devto/: article.md
public/github_discussions/: post.md
public/hn/: show_hn.md
public/ltt/: post.md
public/reddit/: post.md
public/twitter/: post.md
src/: audio.rs  background.rs  cli.rs  engine.rs  gpu_core.rs  gpu_init.rs  lib.rs  loader.rs  logic.rs  screenshot.rs  settings.rs  soundgenerator.rs  system_integration.rs  windows.rs
src/audio/: player.rs  synthesis.rs
testbuilder/: test.flow
tests/: background_tests.rs  engine_tests.rs  flow_loading.rs  loader_tests.rs  logic_tests.rs  monitorswitch_verify.rs  screenshot_tests.rs  sequence_tests.rs  soundgenerator_tests.rs  windows_tests.rs
transition/: config.toml  shader.wgsl
wallpaper/: config.toml  shader.wgsl
