[package]
name = "screen_animation"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
wgpu = "0.19"
pollster = "0.3"
bytemuck = { version = "1.14", features = ["derive"] }
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
zip = "0.6"
rodio = { version = "0.17", features = ["wav"] }
raw-window-handle = "0.6"
image = "0.24"
walkdir = "2.5"
windows = { version = "0.54", features = ["Win32_Graphics_Gdi", "Win32_UI_WindowsAndMessaging", "Win32_System_LibraryLoader", "Win32_UI_HiDpi"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true